# ShowOff

./: README.md
backend/: .env  README.md  justfile  pyproject.toml  requirements.txt  server.py
backend/api/: constants.py  mongo.py  server.py  utils.py
backend/api/dependencies/: curr_user.py  mongo.py
backend/api/models/: project.py  user.py
backend/api/routers/: authentication.py  project.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Login.tsx  Profile.css  Profile.tsx  Tile.tsx  index.css  main.tsx
frontend/src/Theming/: theme.tsx
frontend/src/Types/: Project.tsx  User.tsx
